<resources>
    <string name="app_name">Log.Realty</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_payment">Add Payment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string name="title_activity_gist">Gist</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Sam Kagwisagye</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="search_hint">Search Hint</string>
    <string name="title_activity_search">Search</string>

    <string name="fragment_label_1001">Upcoming Payments</string>
    <string name="fragment_label_1002">Locations</string>
    <string name="fragment_label_1003">Houses</string>
    <string name="fragment_label_1004">Tenants</string>
    <string name="fragment_label_1005">Payments</string>
    <string name="title_activity_add_location">Add Location</string>
    <string name="title_activity_add_house">Add House</string>
    <string name="title_activity_add_tenant">Add Tenant</string>
    <string name="title_activity_detailed_locations">Locations</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="delete_notif_location">"Delete this location and all houses here:</string>
    <string name="delete_notif_house">"Delete this house and all tenants here:</string>
    <string name="tenant">Tenant</string>
    <string name="amount">Amount</string>
    <string name="rate_considered_monthly">Rate Considered(Monthly)</string>
    <string name="rate">Rate</string>
    <string name="date">Date</string>
    <string name="Rent_notif_1"><![CDATA[Hello <Tenant\'s Name Goes Here>, a reminder that next month\'s rent is due in a few. Cheers!]]></string>
    <string name="Rent_notif_2"><![CDATA[Hello <Tenant\'s Name Goes Here>, a reminder that this month\'s rent was due a few days ago. Cheers!]]></string>
    <string name="user_name_default">user@domain.com</string>
    <string name="rent_paid">Rent paid</string>
    <string name="default_rent_paid_here">Default Rent Paid Here</string>
    <string name="add_one_month">Add one month</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="surname_other_names">Surname/Other Names</string>
    <string name="email_address">Email Address</string>
    <string name="telephone_contact">Telephone Contact</string>
    <string name="id_type">ID Type</string>
    <string name="id_number">ID Number</string>
    <string name="house_occupied">House Occupied</string>
    <string name="start_rent_count_on">Start counting rent on:</string>
    <string name="use_date_of_entry">Use date of entry</string>
    <string name="house_information">House Information</string>
    <string name="location">Location</string>
    <string name="single_house">There\'s only a single house in this location</string>
    <string name="house_number">House Number</string>
    <string name="house_no">House No.</string>
    <string name="description">Description</string>
    <string name="default_rent">Use the default rent paid at this location</string>
    <string name="rent_amount">Rent Amount</string>
    <string name="location_name">Location Name</string>
    <string name="default_rent_paid">Default Rent Paid</string>
    <string name="date_entered">Date Entered</string>
    <string name="rent_due">Rent Due</string>
    <string name="date_rent_due">Date Rent Due</string>
    <string name="one_day_to">One day to</string>
    <string name="frequency">Frequency</string>
    <string name="day_rent_is_due">Day Rent is due</string>
    <string name="one_day_after">One day after</string>
    <string name="every_five_days_after_that">Every five days after that</string>
    <string name="permission">Permission</string>
    <string name="allow_data_backup">Allow Data Backup</string>
    <string name="title_activity_details">Details</string>
    <string name="load_more">Load More</string>
</resources>
