<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    app:theme="@style/AppTheme"
    android:animateLayoutChanges="true"
    tools:context="ug.karuhanga.logrealty.Views.Details">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/row_detailed_house_label_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:labelFor="@+id/text_view_detailed_house_location">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/text_view_detailed_house_label_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="Location"
                        android:textAppearance="@android:style/TextAppearance.Holo.Small"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </TableRow>

            <TableRow
                android:id="@+id/row_detailed_house_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <AutoCompleteTextView
                        android:id="@+id/edit_text_detailed_house_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/location"
                        android:inputType="text"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_view_detailed_house_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/button_detailed_house_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@color/Transparent"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_edit_black_24dp" />
                </android.support.constraint.ConstraintLayout>

            </TableRow>

            <TableRow
                android:id="@+id/row_detailed_house_label_house_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/text_view_detailed_house_house_information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/house_information"
                        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/button_detailed_house_house_information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/Transparent"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_edit_black_24dp" />
                </android.support.constraint.ConstraintLayout>

            </TableRow>

            <TableRow
                android:id="@+id/row_detailed_house_single_house"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/text_view_detailed_house_single_house"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/single_house"
                        android:textAlignment="center"
                        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/check_box_detailed_house_single_house"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/single_house"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

            </TableRow>

            <TableRow
                android:id="@+id/row_detailed_house_label_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:labelFor="@+id/text_view_detailed_house_number">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/text_view_detailed_house_label_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/house_number"
                        android:textAppearance="@android:style/TextAppearance.Holo.Small"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </TableRow>

            <TableRow
                android:id="@+id/row_detailed_house_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/edit_text_detailed_house_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="House No."
                    android:inputType="number"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/text_view_detailed_house_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/house_no"
                    android:textAppearance="@android:style/TextAppearance.Holo.Medium" />
            </TableRow>

            <TableRow
                android:id="@+id/row_detailed_house_label_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:labelFor="@+id/text_view_detailed_location_location">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/text_view_detailed_house_label_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:textAppearance="@android:style/TextAppearance.Holo.Small"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </TableRow>

            <TableRow
                android:id="@+id/row_detailed_house_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/edit_text_detailed_house_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/description"
                    android:inputType="text"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/text_view_detailed_house_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/description"
                    android:textAppearance="@android:style/TextAppearance.Holo.Medium" />
            </TableRow>

            <TableRow
                android:id="@+id/row_detailed_house_label_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/text_view_detailed_house_label_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/rent_paid"
                        android:textAppearance="@android:style/TextAppearance.Holo.Small"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </TableRow>

            <TableRow
                android:id="@+id/row_detailed_house_default_rent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:visibility="gone">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center">

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/check_box_detailed_house_default_rent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_rent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="15dp" />
                </android.support.constraint.ConstraintLayout>

            </TableRow>

            <TableRow
                android:id="@+id/row_detailed_house_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="80dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edit_text_detailed_house_rent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/rent_amount"
                        android:inputType="number"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_view_detailed_house_rent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rent_amount"
                        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/button_detailed_house_rent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/Transparent"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_edit_black_24dp" />
                </android.support.constraint.ConstraintLayout>

            </TableRow>

        </TableLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@color/Transparent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_detailed_house_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:visibility="visible"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_edit_black_24dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_detailed_house_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:visibility="visible"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_delete_black_24dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>